大模型-初版

--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,7 @@ ENABLE_OCR=true
 OCR_PROVIDER=paddle
 OCR_USE_GPU=false
 LAYOUTLM_MODEL_NAME=microsoft/layoutlmv3-base
+DASHSCOPE_API_KEY=sk-72a39a3afaaf4ad0a5d8be9579ef93c6
+DASHSCOPE_ENDPOINT=https://dashscope.aliyuncs.com/api/v1/services/aigc/multimodal-generation/generation
+QWEN_MODEL_NAME=qwen-vl-max
+
